[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreNumLabel" type="Label" parent="."]
margin_left = 112.0
margin_right = 181.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="LivesNumLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_right = -3.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "3"

[node name="ScoreLabel" type="Label" parent="."]
margin_right = 106.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Score:"

[node name="LivesLabel" type="Label" parent="."]
margin_left = 544.0
margin_right = 643.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Lives:"

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = -19.5
margin_right = 92.5
margin_bottom = 19.5
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -47.5
margin_top = -246.0
margin_right = 47.5
margin_bottom = -201.0
custom_fonts/font = SubResource( 1 )
text = "Start"

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LevelLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -72.0
margin_right = 28.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "Level:"

[node name="LevelNumLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 32.0
margin_right = 56.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 1 )
text = "0"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
